--- a/package.json
+++ b/package.json
@@ -37,5 +37,9 @@
     "husky": "~8.0.3",
     "lint-staged": "~13.2.2"
   },
-  "packageManager": "yarn@3.2.3"
+  "packageManager": "yarn@3.2.3",
+  "dependencies": {
+    "@aave/core-v3": "^1.18.0",
+    "@openzeppelin/contracts": "^5.0.1"
+  }
 }
