--- a/packages/hardhat/package.json
+++ b/packages/hardhat/package.json
@@ -15,6 +15,7 @@
     "verify": "hardhat etherscan-verify"
   },
   "dependencies": {
+    "@aave/core-v3": "^1.18.0",
     "@openzeppelin/contracts": "~4.8.1",
     "@typechain/ethers-v6": "~0.5.1",
     "dotenv": "~16.0.3",
